; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_pci_e82545.c_e82545_tx_update_tdba.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_pci_e82545.c_e82545_tx_update_tdba.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e82545_softc = type { i32, i32, i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.e82545_softc*)* @e82545_tx_update_tdba to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @e82545_tx_update_tdba(%struct.e82545_softc* %0) #0 {
  %2 = alloca %struct.e82545_softc*, align 8
  store %struct.e82545_softc* %0, %struct.e82545_softc** %2, align 8
  %3 = load %struct.e82545_softc*, %struct.e82545_softc** %2, align 8
  %4 = getelementptr inbounds %struct.e82545_softc, %struct.e82545_softc* %3, i32 0, i32 4
  %5 = load i64, i64* %4, align 8
  %6 = trunc i64 %5 to i32
  %7 = shl i32 %6, 32
  %8 = load %struct.e82545_softc*, %struct.e82545_softc** %2, align 8
  %9 = getelementptr inbounds %struct.e82545_softc, %struct.e82545_softc* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = or i32 %7, %10
  %12 = load %struct.e82545_softc*, %struct.e82545_softc** %2, align 8
  %13 = getelementptr inbounds %struct.e82545_softc, %struct.e82545_softc* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 8
  %14 = load %struct.e82545_softc*, %struct.e82545_softc** %2, align 8
  %15 = getelementptr inbounds %struct.e82545_softc, %struct.e82545_softc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.e82545_softc*, %struct.e82545_softc** %2, align 8
  %18 = getelementptr inbounds %struct.e82545_softc, %struct.e82545_softc* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @paddr_guest2host(i32 %16, i32 %19)
  %21 = load %struct.e82545_softc*, %struct.e82545_softc** %2, align 8
  %22 = getelementptr inbounds %struct.e82545_softc, %struct.e82545_softc* %21, i32 0, i32 3
  store i32 %20, i32* %22, align 4
  ret void
}

declare dso_local i32 @paddr_guest2host(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
